[package]
name = "egui-arbor"
version = "0.2.1"
edition = "2024"
authors = ["kyjohnso"]
description = "A tree outliner widget for egui - hierarchical data visualization and editing"
license = "MIT OR Apache-2.0"
repository = "https://github.com/kyjohnso/egui-arbor"
keywords = ["egui", "tree", "outliner", "gui", "widget"]
categories = ["gui"]

[features]
serde = ["dep:serde"]

[dependencies]
egui = "0.33"
serde = { version = "1", optional = true }

[dev-dependencies]
bevy = { version = "0.17", default-features = false, features = [
    "bevy_winit",
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_asset",
    "bevy_scene",
    "bevy_gltf",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "png",
    "hdr",
    "ktx2",
    "x11",
    "wayland",
    "bevy_gizmos",
    "tonemapping_luts",
    "default_font",
    "webgl2"
] }
bevy_egui = "0.38"
eframe = "0.33"

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "bevy_3d_outliner"
path = "examples/bevy_3d_outliner.rs"
